--- a/appsettings.json
+++ b/appsettings.json
@@ -1,10 +1,14 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ProductConnection": "Server=.;Database = PaulsRecipeDB;Trusted_Connection=true; TrustServerCertificate=True;"
+
+  }
 }
