Added key for token signing

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "Auth": {
+    //Key for JWT token, probably move to secret.json before production
+    "Token": "ZPsd1Cxy3\\URj+MOa+Nh9Ial+7IS:2N&"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
