--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.3.3",
     "bootstrap": "^5.1.3",
     "http-proxy-middleware": "^2.0.6",
@@ -57,7 +59,6 @@
     "eject": "react-scripts eject",
     "lint": "eslint ./src/"
   },
-
   "browserslist": {
     "production": [
       ">0.2%",
@@ -71,4 +72,3 @@
     ]
   }
 }
-
