--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -13,6 +13,7 @@
     "oidc-client": "^1.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-jwt": "^1.1.8",
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
